--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
 
 
         <!--sqlserver 依赖-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
             <version>4.0</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
